version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/Results/StrainResults/MaximumPrincipalElasticStrain.rst.txt
.. vale off



:class:`MaximumPrincipalElasticStrain`
======================================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.Results.StrainResults.MaximumPrincipalElasticStrain(internalObject: Any)
              MaximumPrincipalElasticStrain(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext)

   Bases: :py:obj:`object`


   
   Defines a MaximumPrincipalElasticStrain.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MaximumPrincipalElasticStrain

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddAlert`
            - Creates a new Alert
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddConvergence`
            - Creates a new Convergence
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~ClearGeneratedData`
            - Run the ClearGeneratedData action.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - CreateParameter method.
          * - :py:attr:`~CreateResultsAtAllSets`
            - Creates results at all sets for results under a solution.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~DuplicateWithoutResults`
            - Run the DuplicateWithoutResults action.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~EvaluateAllResults`
            - Run the EvaluateAllResults action.
          * - :py:attr:`~ExportAnimation`
            - Run the ExportAnimation action.
          * - :py:attr:`~ExportToSTLFile`
            - ExportToSTLFile method.
          * - :py:attr:`~ExportToTextFile`
            - ExportToTextFile method.
          * - :py:attr:`~FetchRemoteResult`
            - Run the FetchRemoteResult action.
          * - :py:attr:`~FetchRemoteResults`
            - Run the FetchRemoteResult action.
          * - :py:attr:`~GetAPIName`
            - GetAPIName method.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetNodalValues`
            - GetNodalValues method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetQuantityName`
            - GetQuantityName method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~PromoteToNamedSelection`
            - Run the PromoteToNamedSelection action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~RenameBasedOnDefinition`
            - Run the RenameBasedOnDefinition action.
          * - :py:attr:`~RetrieveRemoteDPFResults`
            - RetrieveRemoteDPFResults method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Amplitude`
            - Gets or sets the Amplitude.
          * - :py:attr:`~Average`
            - Gets the Average.
          * - :py:attr:`~AverageAcrossBodies`
            - Gets or sets the AverageAcrossBodies.
          * - :py:attr:`~By`
            - Gets or sets the By.
          * - :py:attr:`~CalculateTimeHistory`
            - Gets or sets the CalculateTimeHistory.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~CombinationNumber`
            - Gets or sets the Combination Number for a Solution Combination result.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~CoordinateSystem`
            - Gets or sets the Coordinate System.
          * - :py:attr:`~CrackFrontNumber`
            - Gets or sets the CrackFrontNumber.
          * - :py:attr:`~CyclicMode`
            - Gets or sets the CyclicMode.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DisplayOption`
            - Gets or sets the DisplayOption.
          * - :py:attr:`~DisplayTime`
            - Gets or sets the DisplayTime.
          * - :py:attr:`~DpfEvaluation`
            - Gets or sets the DpfEvaluation.
          * - :py:attr:`~EnvironmentSelection`
            - Gets or sets the EnvironmentSelection.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~Frequency`
            - Gets or sets the Frequency.
          * - :py:attr:`~GlobalIDs`
            - Gets or sets the GlobalIDs.
          * - :py:attr:`~GraphControlsXAxis`
            - Gets or sets the GraphControlsXAxis.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~HarmonicIndex`
            - Gets or sets the HarmonicIndex.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~Identifier`
            - Gets or sets the Identifier.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~IsSolved`
            - Gets the IsSolved.
          * - :py:attr:`~ItemType`
            - Gets or sets the ItemType.
          * - :py:attr:`~IterationNumber`
            - Gets the IterationNumber.
          * - :py:attr:`~IterationStep`
            - Gets or sets the IterationStep.
          * - :py:attr:`~Layer`
            - Gets or sets the Layer.
          * - :py:attr:`~LoadMultiplier`
            - Gets the LoadMultiplier.
          * - :py:attr:`~LoadStep`
            - Gets the LoadStep.
          * - :py:attr:`~LoadStepForMaximumOfMaximumValues`
            - Get the Load Step for the maximum of maximum values.
          * - :py:attr:`~LoadStepForMaximumOfMinimumValues`
            - Get the Load Step for the maximum of minimum values.
          * - :py:attr:`~LoadStepForMinimumOfMaximumValues`
            - Get the Load Step for the minimum of maximum values.
          * - :py:attr:`~LoadStepForMinimumOfMinimumValues`
            - Get the Load Step for the minimum of minimum values.
          * - :py:attr:`~LoadStepNumber`
            - Gets or sets the LoadStepNumber.
          * - :py:attr:`~Location`
            - Gets or sets the Location.
          * - :py:attr:`~Maximum`
            - Gets the Maximum.
          * - :py:attr:`~MaximumOccursOn`
            - Gets the MaximumOccursOn.
          * - :py:attr:`~MaximumOfMaximumOverTime`
            - Gets the MaximumOfMaximumOverTime.
          * - :py:attr:`~MaximumOfMinimumOverTime`
            - Gets the MaximumOfMinimumOverTime.
          * - :py:attr:`~Minimum`
            - Gets the Minimum.
          * - :py:attr:`~MinimumOccursOn`
            - Gets the MinimumOccursOn.
          * - :py:attr:`~MinimumOfMaximumOverTime`
            - Gets the MinimumOfMaximumOverTime.
          * - :py:attr:`~MinimumOfMinimumOverTime`
            - Gets the MinimumOfMinimumOverTime.
          * - :py:attr:`~Mode`
            - Gets or sets the Mode.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~NamedSelections`
            - Gets or sets the NamedSelections.
          * - :py:attr:`~NormalOrientation`
            - Gets or sets the NormalOrientation.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~Path`
            - Path property.
          * - :py:attr:`~PhaseIncrement`
            - Gets or sets the PhaseIncrement.
          * - :py:attr:`~Plies`
            - Plies property.
          * - :py:attr:`~PlotData`
            - Gets the result table.
          * - :py:attr:`~Ply`
            - Gets or sets the Ply selection.
          * - :py:attr:`~Position`
            - Gets or sets the Position.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ReportedFrequency`
            - Gets the ReportedFrequency.
          * - :py:attr:`~ResultType`
            - Gets or sets the ResultType.
          * - :py:attr:`~RpmSetNumber`
            - Gets or sets the RpmSetNumber.
          * - :py:attr:`~ScopingMethod`
            - Gets or sets the ScopingMethod.
          * - :py:attr:`~SeparateDataByEntity`
            - Gets or sets the SeparateDataByEntity.
          * - :py:attr:`~SetNumber`
            - Gets or sets the Set Number.
          * - :py:attr:`~SolutionCombinationDriver`
            - Gets or sets the SolutionCombinationDriver.
          * - :py:attr:`~SolverComponentIDs`
            - Gets or sets the SolverComponentIDs.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~StressStrainType`
            - Gets or sets the StressStrainType.
          * - :py:attr:`~SubScopeBy`
            - Gets or sets the SubScopeBy.
          * - :py:attr:`~Substep`
            - Gets the Substep.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~Surface`
            - Surface property.
          * - :py:attr:`~SurfaceCoating`
            - SurfaceCoating property.
          * - :py:attr:`~SweepingPhase`
            - Gets or sets the SweepingPhase.
          * - :py:attr:`~TabularData`
            - Gets the tabular data of the result.  Use a to get index to each column of the tabular data.
          * - :py:attr:`~Time`
            - Gets the Time.
          * - :py:attr:`~TimeForMaximumOfMaximumValues`
            - Get the Time for the maximum of maximum values.
          * - :py:attr:`~TimeForMaximumOfMinimumValues`
            - Get the Time for the maximum of minimum values.
          * - :py:attr:`~TimeForMinimumOfMaximumValues`
            - Get the Time for the minimum of maximum values.
          * - :py:attr:`~TimeForMinimumOfMinimumValues`
            - Get the Time for the minimum of minimum values.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~WaterfallDisplayFilterBy`
            - Gets or sets the Filer in Waterfall.
          * - :py:attr:`~WaterfallDisplayFrequencySelection`
            - Gets or sets the Frequency Selection.
          * - :py:attr:`~WaterfallDisplayInterpolateData`
            - Gets or sets the Interpolate Data Property.
          * - :py:attr:`~WaterfallDisplayLowerBand`
            - Gets or sets the Lower Band Value.
          * - :py:attr:`~WaterfallDisplayMaxRPM`
            - Gets or sets the Display Max RPM.
          * - :py:attr:`~WaterfallDisplayMinRPM`
            - Gets or sets the Display Min RPM.
          * - :py:attr:`~WaterfallDisplayModeSelection`
            - Gets or sets the Mode Selection.
          * - :py:attr:`~WaterfallDisplayOrderSelection`
            - Gets or sets the Order Selection.
          * - :py:attr:`~WaterfallDisplayRpmSelection`
            - Gets or sets the RPM Selection.
          * - :py:attr:`~WaterfallDisplayScopeToOrderLines`
            - Gets or sets the Scope to Order Lines Property.
          * - :py:attr:`~WaterfallDisplayTimeSelection`
            - Gets or sets the Time Selection.
          * - :py:attr:`~WaterfallDisplayUpperBand`
            - Gets or sets the Upper Band Value.
          * - :py:attr:`~WaterfallDisplayXAxisMaximum`
            - Gets or sets the Maximum X-Axis Value.
          * - :py:attr:`~WaterfallDisplayXAxisMinimum`
            - Gets or sets the Minimum X-Axis Value.
          * - :py:attr:`~WaterfallDisplayYAxisMaximum`
            - Gets or sets the Maximum Y-Axis Value.
          * - :py:attr:`~WaterfallDisplayYAxisMinimum`
            - Gets or sets the Minimum Y-Axis Value.
          * - :py:attr:`~WaterfallShowTextOnMosaic`
            - Gets or sets the Waterfall Mosaic Text Property.







Property detail
---------------
.. py:property:: Amplitude
   :type: Optional[bool]


   
   Gets or sets the Amplitude.
















   ..
       !! processed by numpydoc !!

.. py:property:: Average
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the Average.
















   ..
       !! processed by numpydoc !!

.. py:property:: AverageAcrossBodies
   :type: Optional[bool]


   
   Gets or sets the AverageAcrossBodies.
















   ..
       !! processed by numpydoc !!

.. py:property:: By
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SetDriverStyle]


   
   Gets or sets the By.
















   ..
       !! processed by numpydoc !!

.. py:property:: CalculateTimeHistory
   :type: Optional[bool]


   
   Gets or sets the CalculateTimeHistory.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: CombinationNumber
   :type: Optional[int]


   
   Gets or sets the Combination Number for a Solution Combination result.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]


   
   Gets or sets the Coordinate System. 
   Accepts/Returns None for Solution Coordinate System in the general case (if applicable). 
   Accepts/Returns None for Fiber Coordinate System for a result that is sub scoped by ply.
















   ..
       !! processed by numpydoc !!

.. py:property:: CrackFrontNumber
   :type: Optional[int]


   
   Gets or sets the CrackFrontNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: CyclicMode
   :type: Optional[int]


   
   Gets or sets the CyclicMode.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DisplayOption
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ResultAveragingType]


   
   Gets or sets the DisplayOption.
















   ..
       !! processed by numpydoc !!

.. py:property:: DisplayTime
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the DisplayTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: DpfEvaluation
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DpfEvaluationType]


   
   Gets or sets the DpfEvaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: EnvironmentSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.Analysis]


   
   Gets or sets the EnvironmentSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: Frequency
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the Frequency.
















   ..
       !! processed by numpydoc !!

.. py:property:: GlobalIDs
   :type: Optional[str]


   
   Gets or sets the GlobalIDs.
















   ..
       !! processed by numpydoc !!

.. py:property:: GraphControlsXAxis
   :type: Optional[Ansys.Mechanical.DataModel.Enums.GraphControlsXAxis]


   
   Gets or sets the GraphControlsXAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: HarmonicIndex
   :type: Optional[int]


   
   Gets or sets the HarmonicIndex.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Identifier
   :type: Optional[str]


   
   Gets or sets the Identifier.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSResultAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsSolved
   :type: Optional[bool]


   
   Gets the IsSolved.
















   ..
       !! processed by numpydoc !!

.. py:property:: ItemType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ResultFileItemType]


   
   Gets or sets the ItemType.
















   ..
       !! processed by numpydoc !!

.. py:property:: IterationNumber
   :type: Optional[int]


   
   Gets the IterationNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: IterationStep
   :type: Optional[int]


   
   Gets or sets the IterationStep.
















   ..
       !! processed by numpydoc !!

.. py:property:: Layer
   :type: Optional[int]


   
   Gets or sets the Layer.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadMultiplier
   :type: Optional[float]


   
   Gets the LoadMultiplier.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadStep
   :type: Optional[int]


   
   Gets the LoadStep.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadStepForMaximumOfMaximumValues
   :type: Optional[int]


   
   Get the Load Step for the maximum of maximum values.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadStepForMaximumOfMinimumValues
   :type: Optional[int]


   
   Get the Load Step for the maximum of minimum values.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadStepForMinimumOfMaximumValues
   :type: Optional[int]


   
   Get the Load Step for the minimum of maximum values.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadStepForMinimumOfMinimumValues
   :type: Optional[int]


   
   Get the Load Step for the minimum of minimum values.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadStepNumber
   :type: Optional[int]


   
   Gets or sets the LoadStepNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]


   
   Gets or sets the Location.
















   ..
       !! processed by numpydoc !!

.. py:property:: Maximum
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the Maximum.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumOccursOn
   :type: Optional[str]


   
   Gets the MaximumOccursOn.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumOfMaximumOverTime
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the MaximumOfMaximumOverTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumOfMinimumOverTime
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the MaximumOfMinimumOverTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: Minimum
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the Minimum.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumOccursOn
   :type: Optional[str]


   
   Gets the MinimumOccursOn.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumOfMaximumOverTime
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the MinimumOfMaximumOverTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumOfMinimumOverTime
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the MinimumOfMinimumOverTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: Mode
   :type: Optional[int]


   
   Gets or sets the Mode.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NamedSelections
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets or sets the NamedSelections.
















   ..
       !! processed by numpydoc !!

.. py:property:: NormalOrientation
   :type: Optional[Ansys.Mechanical.DataModel.Enums.NormalOrientationType]


   
   Gets or sets the NormalOrientation.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Path
   :type: Optional[Ansys.ACT.Automation.Mechanical.Path]


   
   Path property.
















   ..
       !! processed by numpydoc !!

.. py:property:: PhaseIncrement
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the PhaseIncrement.
















   ..
       !! processed by numpydoc !!

.. py:property:: Plies
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.ImportedPliesCollection]]


   
   Plies property.
















   ..
       !! processed by numpydoc !!

.. py:property:: PlotData
   :type: Optional[Ansys.Mechanical.DataModel.Results.ResultDataTable]


   
   Gets the result table.
















   ..
       !! processed by numpydoc !!

.. py:property:: Ply
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.AnalysisPly]]


   
   Gets or sets the Ply selection.
















   ..
       !! processed by numpydoc !!

.. py:property:: Position
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ShellFaceType]


   
   Gets or sets the Position.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReportedFrequency
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the ReportedFrequency.
















   ..
       !! processed by numpydoc !!

.. py:property:: ResultType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ResultType]


   
   Gets or sets the ResultType.
















   ..
       !! processed by numpydoc !!

.. py:property:: RpmSetNumber
   :type: Optional[int]


   
   Gets or sets the RpmSetNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopingMethod
   :type: Optional[Ansys.Mechanical.DataModel.Enums.GeometryDefineByType]


   
   Gets or sets the ScopingMethod.
















   ..
       !! processed by numpydoc !!

.. py:property:: SeparateDataByEntity
   :type: Optional[bool]


   
   Gets or sets the SeparateDataByEntity.
















   ..
       !! processed by numpydoc !!

.. py:property:: SetNumber
   :type: Optional[int]


   
   Gets or sets the Set Number.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolutionCombinationDriver
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SolutionCombinationDriverStyle]


   
   Gets or sets the SolutionCombinationDriver.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolverComponentIDs
   :type: Optional[str]


   
   Gets or sets the SolverComponentIDs.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: StressStrainType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.StressStrainType]


   
   Gets or sets the StressStrainType.
















   ..
       !! processed by numpydoc !!

.. py:property:: SubScopeBy
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SubScopingDefineByType]


   
   Gets or sets the SubScopeBy.
















   ..
       !! processed by numpydoc !!

.. py:property:: Substep
   :type: Optional[int]


   
   Gets the Substep.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: Surface
   :type: Optional[Ansys.ACT.Automation.Mechanical.Surface]


   
   Surface property.
















   ..
       !! processed by numpydoc !!

.. py:property:: SurfaceCoating
   :type: Optional[Ansys.ACT.Automation.Mechanical.SurfaceCoating]


   
   SurfaceCoating property.
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepingPhase
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the SweepingPhase.
















   ..
       !! processed by numpydoc !!

.. py:property:: TabularData
   :type: Optional[Ansys.Mechanical.Interfaces.ITable]


   
   Gets the tabular data of the result.  Use a to get index to each column of the tabular data.
















   ..
       !! processed by numpydoc !!

.. py:property:: Time
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the Time.
















   ..
       !! processed by numpydoc !!

.. py:property:: TimeForMaximumOfMaximumValues
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Get the Time for the maximum of maximum values.
















   ..
       !! processed by numpydoc !!

.. py:property:: TimeForMaximumOfMinimumValues
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Get the Time for the maximum of minimum values.
















   ..
       !! processed by numpydoc !!

.. py:property:: TimeForMinimumOfMaximumValues
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Get the Time for the minimum of maximum values.
















   ..
       !! processed by numpydoc !!

.. py:property:: TimeForMinimumOfMinimumValues
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Get the Time for the minimum of minimum values.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayFilterBy
   :type: Optional[Ansys.Mechanical.DataModel.Enums.WaterfallDisplayFilterBy]


   
   Gets or sets the Filer in Waterfall.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayFrequencySelection
   :type: Optional[str]


   
   Gets or sets the Frequency Selection.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayInterpolateData
   :type: Optional[bool]


   
   Gets or sets the Interpolate Data Property.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayLowerBand
   :type: Optional[float]


   
   Gets or sets the Lower Band Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayMaxRPM
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the Display Max RPM.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayMinRPM
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the Display Min RPM.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayModeSelection
   :type: Optional[str]


   
   Gets or sets the Mode Selection.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayOrderSelection
   :type: Optional[str]


   
   Gets or sets the Order Selection.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayRpmSelection
   :type: Optional[str]


   
   Gets or sets the RPM Selection.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayScopeToOrderLines
   :type: Optional[bool]


   
   Gets or sets the Scope to Order Lines Property.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayTimeSelection
   :type: Optional[str]


   
   Gets or sets the Time Selection.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayUpperBand
   :type: Optional[float]


   
   Gets or sets the Upper Band Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayXAxisMaximum
   :type: Optional[float]


   
   Gets or sets the Maximum X-Axis Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayXAxisMinimum
   :type: Optional[float]


   
   Gets or sets the Minimum X-Axis Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayYAxisMaximum
   :type: Optional[float]


   
   Gets or sets the Maximum Y-Axis Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallDisplayYAxisMinimum
   :type: Optional[float]


   
   Gets or sets the Minimum Y-Axis Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaterfallShowTextOnMosaic
   :type: Optional[bool]


   
   Gets or sets the Waterfall Mosaic Text Property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddAlert() -> Ansys.ACT.Automation.Mechanical.Results.Alert

   
   Creates a new Alert

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddConvergence() -> Ansys.ACT.Automation.Mechanical.Results.Convergence

   
   Creates a new Convergence

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: ClearGeneratedData() -> None

   
   Run the ClearGeneratedData action.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   CreateParameter method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateResultsAtAllSets() -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Creates results at all sets for results under a solution.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: DuplicateWithoutResults() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Run the DuplicateWithoutResults action.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: EvaluateAllResults() -> None

   
   Run the EvaluateAllResults action.

   ..
       !! processed by numpydoc !!

.. py:method:: ExportAnimation(filePath: str, format: Ansys.Mechanical.DataModel.Enums.GraphicsAnimationExportFormat, settings: Ansys.Mechanical.Graphics.AnimationExportSettings) -> None

   
   Run the ExportAnimation action.

   ..
       !! processed by numpydoc !!

.. py:method:: ExportToSTLFile(filePath: str) -> None

   
   ExportToSTLFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: ExportToTextFile(bIgnoreExcelPreference: bool, filePath: str) -> None
               ExportToTextFile(filePath: str) -> None

   
   ExportToTextFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: FetchRemoteResult() -> None

   
   Run the FetchRemoteResult action.

   ..
       !! processed by numpydoc !!

.. py:method:: FetchRemoteResults() -> None

   
   Run the FetchRemoteResult action.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   GetAPIName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]
               GetChildren(category: Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory, recurses: bool, children: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetNodalValues(bodyRefId: int) -> System.Collections.Generic.Dictionary[int, float]

   
   GetNodalValues method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetQuantityName(obj: Ansys.Common.Interop.DSObjectsAuto.IDSResultAuto) -> str

   
   GetQuantityName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool
               IsPropertyEditable(propName: str) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool
               IsPropertyVisible(propName: str) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: PromoteToNamedSelection() -> Iterable[Ansys.ACT.Automation.Mechanical.NamedSelection]

   
   Run the PromoteToNamedSelection action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: RenameBasedOnDefinition() -> None

   
   Run the RenameBasedOnDefinition action.

   ..
       !! processed by numpydoc !!

.. py:method:: RetrieveRemoteDPFResults() -> None

   
   RetrieveRemoteDPFResults method.

   ..
       !! processed by numpydoc !!



.. vale on